--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DJBnjack/stats-collector#readme",
   "dependencies": {
+    "moment": "^2.10.6",
     "request": "^2.67.0",
     "statsd-client": "^0.2.1"
   }
